k8s_dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    name: django-dev-deploy
    labels:
        app: django-app
        env: dev
spec:
    replicas: 1
    selector:
        matchLabels:
          app: django-app
          env: dev
    template:
        metadata:
            labels:
              app: django-app
              env: dev
        spec:
            containers:
                - name: django-app-dev
                  image: elzig1999/django_app:latest
                  ports:
                    - containerPort: 80
