k8s_dev/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-svc-clusterip
  labels:
    app: django-app
    env: dev
spec:
  selector:
    app: django-app
    env: dev
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 80
  type: ClusterIP
